:seedling: Added the Devourer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>The Butterfly Devourer</title>
   </head>
-  <body style="padding: 0; margin: 0; overflow: hidden;">
-    <script src="js/.js"></script>
+  <!-- <body style="padding: 0; margin: 0; overflow: hidden;"> -->
+  <body background="res/bg.jpg">
+    <!-- <script src="js/.js"></script> -->
+	<div><img src="res/devourer.gif"/></div>
   </body>
 </html>
