:camera Animated transitions

--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html>
   <head>
     <title>The Butterfly Devourer</title>
+	<link rel="stylesheet" href="res/styles.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
-  <!-- <body style="padding: 0; margin: 0; overflow: hidden;"> -->
-  <body background="res/bg.jpg">
-    <!-- <script src="js/.js"></script> -->
-	<div><img src="res/devourer.gif"/></div>
+  <body>
+    <script src="js/scroll.js"></script>
+	
+	<div class="bg">
+		<div class="mist">
+			<img src="res/mist.png"> </img>
+		</div>
+		<div class="devourer">
+			<img src="res/devourer.gif"> </img>
+		</div>
+	</div>
+	
   </body>
 </html>
