--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="verse-container">
 			<img src="res/cont.png"></img>
 			<div class="centered">
-				<div class="verse0"><br>The Butterfly Devourer<br><br>~scroll/arrows to begin~<br>~m to mute~</div>
+				<div class="verse0"><br>The Butterfly Devourer<br><br>~scroll/arrows/click to begin~<br>~m to mute~</div>
 				<div class="verse1"><br>Delightful,<br>Enthralling dreams.<br>All eaten by<br>The Butterfly Devourer.</div>
 				<div class="verse2"><br>Peaceful,<br>Refreshing mornings.<br>Leadened by<br>The Butterfly Devourer.</div>
 				<div class="verse3"><br>Everlasting,<br>Strong connections.<br>Ignited by<br>The Butterfly Devourer.</div>
@@ -35,7 +35,7 @@
 				
 				<div class="verse18"><br>You don't have to do it alone.<br><font color="#00aa00">Keep fighting.</font></div>
 				
-				<div class="verse19"><br><br><br>Made by ForestBrewedArt<br>~scroll to replay~</div>
+				<div class="verse19"><br><br><br>Made by ForestBrewedArt</div>
 			</div>
 		</div>
 		<div class="mist">
