:hatched_chick: Finished rebuilding, added scalability

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	
   <div class="my-container" id="bg">
     <div class="my-container" id="mist">
-      <div class="my-container" id="text-container">
+    </div>
+    <div class="my-container" id="text-container">
       <div id="verse-container">
         <div class="verse" id="verse0"> <br>The Butterfly Devourer<br><br>~scroll/arrows/click to begin~<br>~m to mute~ </div>
         <div class="verse" id="verse1"><br>Delightful,<br>Enthralling dreams.<br>All eaten by<br>The Butterfly Devourer.</div>
@@ -36,14 +37,12 @@
         
         <div class="verse" id="verse18"><br>You don't have to do it alone.<br><font color="#00aa00">Keep fighting.</font></div>
         
-        <div class="verse" id="verse19"><br><br><br>Made by ForestBrewedArt</div>
-      </div>
-      </div>
-      <div id="devourer">
-        <img src="res/devourer.gif"> </img>
+        <div class="verse" id="verse19"><br>You don't have to do it alone.<br><font color="#00aa00">Keep fighting.</font><br><br>Call 116 123<br>https://www.samaritans.org/</div>
       </div>
     </div>
-  
+    <div id="devourer">
+      <img src="res/devourer.gif"> </img>
+    </div>
   </div>
 	
   </body>
